fixed header text color customizer functinality and prevented header image from overflowing outside of the body

--- a/scss/_global.scss
+++ b/scss/_global.scss
@@ -57,3 +57,8 @@
 .site-footer {
 	@extend %clearfix;
 }
+
+/* Prevent header images from overflowing body container */
+body {
+	overflow: hidden;
+}
