--- a/scss/_header.scss
+++ b/scss/_header.scss
@@ -35,6 +35,7 @@
             font-size: 3.2rem;
             clear: none;
             line-height: normal;
+            color: $header-text;
             // Improve font rendering in webkit and firefox
             -webkit-text-stroke: 0.55px;
             text-shadow: 0px 0px 0px, 0px 0px 0px;
@@ -44,6 +45,9 @@
             }
             a {
                 color: $header-text;
+                // Improve font rendering in webkit and firefox
+                -webkit-text-stroke: 0.55px;
+                text-shadow: 0px 0px 0px, 0px 0px 0px;
                 line-height: 55px;
                 @media screen and (max-width: $mobile-menu) {
                     line-height: 35px;
